MTC-21 created travis file to build

--- a/src/Docker/docker-compose.override.yml
+++ b/src/Docker/docker-compose.override.yml
@@ -5,13 +5,13 @@ services:
   nginx:
     image: nginx:1.13.8-alpine
     depends_on:
-      - api
+      - chest
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ${LOG_PATH:-/var/log}:/var/log
     ports:
       - "5011:80"
 
-  api:
+  chest:
     ports:
       - "5008:80"
