--- a/src/Docker/docker-compose.yml
+++ b/src/Docker/docker-compose.yml
@@ -2,14 +2,11 @@ version: '3'
 
 services:
 
-  api:
+  chest:
     image: chest:${TAG:-dev}
     container_name: chest
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
-      - API_AUTHORITY=${API_AUTHORITY}
-      - API_NAME=${API_NAME}
-      - API_SECRET=${API_SECRET}
     env_file:
       - ./default.env
     build:
