--- a/src/Docker/docker-compose.yml
+++ b/src/Docker/docker-compose.yml
@@ -16,3 +16,18 @@ services:
         version: ${VERSION:-0.1.0-developer}
     volumes:
       - ${LOG_PATH:-/logs}:/app/logs
+
+  postgres:
+    image: postgres:10.1-alpine
+    container_name: postgres
+    environment:
+      - POSTGRES_DB=Chest
+      - POSTGRES_USER=chest
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_ROOT_PASSWORD=postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+volumes:
+  postgres_data:
