--- a/src/Docker/docker-compose.yml
+++ b/src/Docker/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     container_name: postgres
     environment:
       - POSTGRES_DB=Chest
-      - POSTGRES_USER=chest
-      - POSTGRES_PASSWORD=secret
-      - POSTGRES_ROOT_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USER:-chest}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-secret}
+      - POSTGRES_ROOT_PASSWORD=${POSTGRES_ROOT_PASSWORD:-postgres}
     ports:
       - "5432:5432"
     volumes:
