--- a/src/Docker/nginx/nginx.conf
+++ b/src/Docker/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
 
  
         location / {
-            proxy_pass http://api:80;
+            proxy_pass http://chest:80;
 
             proxy_redirect off;
             proxy_set_header Upgrade $http_upgrade;
