TUA-174: Build config - Move and config of Dockerfile specific to a project - Changes on Dockerfile content following VisualStudio/MS pattern - Removal of VisualStudio.Dockerfile - Creation of scripts (build, push) expected by CI - Changes on docker-compose.yml in adherence to file path changes and minor enhancements

--- a/src/Chest/Chest.csproj
+++ b/src/Chest/Chest.csproj
@@ -80,6 +80,9 @@
     <Content Update="appsettings.Custom.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="appsettings.Deployment.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="appsettings.Docker.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -96,9 +99,6 @@
     <None Update="appsettings.Docker.json">
       <DependentUpon>appsettings.json</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="VisualStudio.Dockerfile">
-      <DependentUpon>Dockerfile</DependentUpon>
     </None>
   </ItemGroup>
 
