--- a/src/Docker/docker-compose.yml
+++ b/src/Docker/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       args:
         version: ${VERSION:-0.1.0-developer}
     container_name: chest
+    depends_on:
+      - postgres
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - CHEST_CONNECTIONSTRING=${CHEST_CONNECTIONSTRING:-Host=postgres;Port=5432;Database=Chest;User Id=chest;Password=secret}
