--- a/src/Docker/docker-compose.override.yml
+++ b/src/Docker/docker-compose.override.yml
@@ -8,10 +8,10 @@ services:
       - chest
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ${LOG_PATH:-/var/log}:/var/log
+      - ${LOG_PATH:-./var/log}:/var/log
     ports:
       - "5011:80"
 
   chest:
     ports:
-      - "5008:80"
+      - 80
