LT-91 Remove old client

--- a/src/tests/Chest.Tests/Chest.Tests.csproj
+++ b/src/tests/Chest.Tests/Chest.Tests.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\client\Chest.AutoClient\Chest.AutoClient.csproj" />
+    <ProjectReference Include="..\..\client\Chest.Client\Chest.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
