LT-81: Dockerfile enhancements to generate a smaller image

--- a/src/Chest/Dockerfile
+++ b/src/Chest/Dockerfile
@@ -11,7 +11,7 @@ RUN dotnet build -c Release -r linux-x64 -o /app
 FROM build AS publish
 RUN dotnet publish -c Release -r linux-x64 -o /app
 
-FROM publish AS final
+FROM base AS final
 WORKDIR /app
-COPY --from=build /app .
+COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "Chest.dll"]
