--- a/src/client/Chest.Client/Chest.Client.csproj
+++ b/src/client/Chest.Client/Chest.Client.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.2.1-RC5</Version>
+    <Version>2.0.1</Version>
     <Description>Provides a client on Chest.
 The chest is a metadata service which saves and fetches data against three keys. Category, Collection and Key.
 It also provides endpoints to fetch list of all categories, collections and keys in the system.</Description>
-    <PackageReleaseNotes>Extended to store category, collection with key.
-Added update, delete and list methods.</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed deserializer to handle System.Nullable&lt;T&gt; types correctly</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
