--- a/src/Chest/Dockerfile
+++ b/src/Chest/Dockerfile
@@ -1,8 +1,8 @@
-FROM microsoft/aspnetcore:2.0 AS base
+FROM microsoft/dotnet:2.1.0-aspnetcore-runtime AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM microsoft/aspnetcore-build:2.0 AS build
+FROM microsoft/dotnet:2.1.300-sdk AS build
 WORKDIR /src
 COPY . ./
 WORKDIR /src/Chest
