--- a/src/Chest/appsettings.json
+++ b/src/Chest/appsettings.json
@@ -10,8 +10,12 @@
         "Args": {
           "configure": [
             {
-              "Name": "RollingFile",
-              "Args": { "pathFormat": "logs/Chest/Chest-developer-{Date}.log" }
+              "Name": "File",
+              "Args": {
+                "rollingInterval": "Day",
+                "path": "logs/Chest/Chest-developer.log",
+                "fileSizeLimitBytes": null
+              }
             }
           ]
         }
