--- a/src/Chest/Chest.csproj
+++ b/src/Chest/Chest.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>2.1.1-developer</Version>
+    <Version>2.8.0</Version>
     <Authors>Chest Contributors</Authors>
     <Company>Lykke</Company>
     <Copyright>Copyright (c) Chest Contributors. All rights reserved.</Copyright>
