--- a/src/NuGet.config
+++ b/src/NuGet.config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <add key="lykkecloud" value="http://nuget-lykkecloud.azurewebsites.net/nuget/" />
   </packageSources>
 </configuration>
