LT-397: Enhancing logging with correct app version and with Lykke middleware and standards

--- a/src/Chest/appsettings.json
+++ b/src/Chest/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "urls": "http://*:5011;",
   "serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Async" ],
     "minimumLevel": {
       "default": "Debug"
     },
@@ -10,16 +11,27 @@
         "Args": {
           "configure": [
             {
+              "Name": "Console",
+              "Args": {
+                "outputTemplate": "[{Timestamp:u}] [{Application}:{Version}:{Environment}] [{Level:u3}] [{RequestId}] [{CorrelationId}] [{ExceptionId}] {Message:lj} {NewLine}{Exception}"
+              }
+            },
+            {
               "Name": "File",
               "Args": {
-                "rollingInterval": "Day",
+                "outputTemplate": "[{Timestamp:u}] [{Application}:{Version}:{Environment}] [{Level:u3}] [{RequestId}] [{CorrelationId}] [{ExceptionId}] {Message:lj} {NewLine}{Exception}",
                 "path": "logs/Chest/Chest-developer.log",
+                "rollingInterval": "Day",
                 "fileSizeLimitBytes": null
               }
             }
           ]
         }
       }
-    ]
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithDemystifiedStackTraces" ],
+    "Properties": {
+      "Application": "Chest"
+    }
   }
 }
