LT-907: Removing private nuget sources from Nuget.config - Removal of Lykke private nuget source - Adjustment of compose yaml to allow dockerfile operation on upper context - Changes on Dockerfile to enable copy of injected Nuget.config as global

--- a/src/Chest/Dockerfile
+++ b/src/Chest/Dockerfile
@@ -3,8 +3,8 @@ WORKDIR /app
 EXPOSE 80
 
 FROM microsoft/dotnet:2.1.403-sdk AS build
-WORKDIR /src
 COPY . ./
+RUN cp NuGet.*onfig /usr/local/share/NuGet.Config 2>/dev/null || :
 WORKDIR /src/Chest
 RUN dotnet build -c Release -r linux-x64 -o /app
 
