--- a/src/Docker/docker-compose.release.yml
+++ b/src/Docker/docker-compose.release.yml
@@ -4,5 +4,5 @@ services:
 
   chest:
     build:
-      context: ../
-      dockerfile: Chest/Dockerfile
+      context: ../../
+      dockerfile: src/Chest/Dockerfile
