--- a/src/Chest/Dockerfile
+++ b/src/Chest/Dockerfile
@@ -1,6 +1,7 @@
 FROM microsoft/dotnet:2.2-sdk-alpine AS build
 COPY . ./
 RUN apk add --no-cache icu-libs \
+ && mkdir cert -p \
  && cp cert/*.crt /usr/local/share/ca-certificates/ 2>/dev/null \
  && update-ca-certificates \
  || echo "No specific certificate given."
@@ -10,6 +11,11 @@ WORKDIR /src/Chest
 RUN dotnet publish -c Release -o /app
 
 FROM microsoft/dotnet:2.2-aspnetcore-runtime-alpine AS final
+COPY --from=build cert ./cert
+RUN apk add --no-cache icu-libs \
+ && cp cert/*.crt /usr/local/share/ca-certificates/ 2>/dev/null \
+ && update-ca-certificates \
+ || echo "No specific certificate given."
 WORKDIR /app
 COPY --from=build /app .
 ENTRYPOINT ["dotnet", "Chest.dll"]
