LT-1240 Update Licenses

--- a/src/Chest/appsettings.Deployment.json
+++ b/src/Chest/appsettings.Deployment.json
@@ -1,4 +1,6 @@
-﻿{
+﻿// (c) Lykke Corporation 2019 - All rights reserved. No copying, adaptation, decompiling, distribution or any other form of use permitted.
+
+{
   "urls": "http://*:80;",
   "serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Async" ],
