--- a/src/Chest.Client/Chest.Client.csproj
+++ b/src/Chest.Client/Chest.Client.csproj
@@ -10,6 +10,10 @@ It also provides endpoints to fetch list of all categories, collections and keys
   </PropertyGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.11" />
   </ItemGroup>
 
