--- a/src/Chest/appsettings.Docker.json
+++ b/src/Chest/appsettings.Docker.json
@@ -36,5 +36,9 @@
     "Properties": {
       "Application": "Chest"
     }
+  },
+  "ChestClientSettings": {
+    "ServiceUrl": "",
+    "ApiKey": "margintrading"
   }
 }
