LT-1672: refit client, kill autorest tests

--- a/src/Chest/Chest.csproj
+++ b/src/Chest/Chest.csproj
@@ -104,4 +104,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chest.Client\Chest.Client.csproj" />
+  </ItemGroup>
+
 </Project>
