--- a/src/Chest.Client/Chest.Client.csproj
+++ b/src/Chest.Client/Chest.Client.csproj
@@ -14,6 +14,7 @@ It also provides endpoints to fetch list of all categories, collections and keys
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lykke.Common" Version="7.3.1" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.11" />
     <PackageReference Include="Refit" Version="4.7.51" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
