--- a/src/Chest.Client/Chest.Client.csproj
+++ b/src/Chest.Client/Chest.Client.csproj
@@ -15,6 +15,7 @@ It also provides endpoints to fetch list of all categories, collections and keys
 
   <ItemGroup>
     <PackageReference Include="Lykke.Common" Version="7.3.1" />
+    <PackageReference Include="Lykke.HttpClientGenerator" Version="2.5.0" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.11" />
     <PackageReference Include="Refit" Version="4.6.30" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
