--- a/src/Chest/Chest.csproj
+++ b/src/Chest/Chest.csproj
@@ -46,9 +46,9 @@
     <PackageReference Include="CacheManager.Microsoft.Extensions.Caching.Memory" Version="1.1.2" />
     <PackageReference Include="CacheManager.Serialization.Json" Version="1.1.2" />
     <PackageReference Include="EFSecondLevelCache.Core" Version="1.6.3" />
-    <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.10.2" />
-    <PackageReference Include="Lykke.Middlewares" Version="1.0.0-1537228216" />
-    <PackageReference Include="Lykke.Snow.Common.Startup" Version="1.2.9" />
+    <PackageReference Include="Lykke.Common.ApiLibrary" Version="2.4.2" />
+    <PackageReference Include="Lykke.Middlewares" Version="3.0.0" />
+    <PackageReference Include="Lykke.Snow.Common.Startup" Version="1.2.18" />
     <PackageReference Include="Microsoft.AspNetCore.All" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="2.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
@@ -63,7 +63,8 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
