updated to net core 3.1

--- a/src/Chest/Dockerfile
+++ b/src/Chest/Dockerfile
@@ -1,4 +1,4 @@
-FROM microsoft/dotnet:2.2-sdk-alpine AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
 COPY . ./
 RUN apk add --no-cache icu-libs \
  && mkdir cert -p \
@@ -8,9 +8,10 @@ RUN apk add --no-cache icu-libs \
 RUN cp [nN]u[gG]et.[cC]onfig /usr/local/share/NuGet.Config 2>/dev/null \
  || echo "No specific Nuget configuration given."
 WORKDIR /src/Chest
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 RUN dotnet publish -c Release -o /app
 
-FROM microsoft/dotnet:2.2-aspnetcore-runtime-alpine AS final
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS final
 COPY --from=build cert ./cert
 RUN apk add --no-cache icu-libs \
  && cp cert/*.crt /usr/local/share/ca-certificates/ 2>/dev/null \
@@ -18,4 +19,5 @@ RUN apk add --no-cache icu-libs \
  || echo "No specific certificate given."
 WORKDIR /app
 COPY --from=build /app .
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 ENTRYPOINT ["dotnet", "Chest.dll"]
