--- a/src/Chest/Chest.csproj
+++ b/src/Chest/Chest.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="CacheManager.Serialization.Json" Version="1.1.2" />
     <PackageReference Include="CacheManager.Serialization.Json" Version="1.1.2" />
     <PackageReference Include="EFSecondLevelCache.Core" Version="2.9.1" />
+    <PackageReference Include="Lykke.Common.MsSql" Version="2.4.0" />
     <PackageReference Include="Lykke.Middlewares" Version="3.3.0" />
     <PackageReference Include="Lykke.Snow.Common.Startup" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.4" />
