--- a/src/Chest/appsettings.json
+++ b/src/Chest/appsettings.json
@@ -39,5 +39,9 @@
   },
   "ChestClientSettings": {
     "ApiKey": ""
+  },
+  "CqrsSettings": {
+    "RetryDelay": "00:00:02",
+    "EnvironmentName": "dev"
   }
 }
