--- a/src/Chest/Chest.csproj
+++ b/src/Chest/Chest.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="Lykke.Cqrs" Version="9.0.1" />
     <PackageReference Include="Lykke.Logs.Serilog" Version="2.1.0" />
     <PackageReference Include="Lykke.MarginTrading.AssetService.Contracts" Version="3.3.0" />
+    <PackageReference Include="Lykke.Messaging" Version="6.3.1" />
     <PackageReference Include="Lykke.Messaging.RabbitMq" Version="2.2.2" />
     <PackageReference Include="Lykke.Middlewares" Version="3.3.0" />
     <PackageReference Include="Lykke.Snow.Common" Version="1.4.0" />
