--- a/src/Chest/Dockerfile
+++ b/src/Chest/Dockerfile
@@ -1,6 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
 COPY . ./
 RUN apk add --no-cache icu-libs \
+ && apk add --no-cache tzdata \
  && mkdir cert -p \
  && cp cert/*.crt /usr/local/share/ca-certificates/ 2>/dev/null \
  && update-ca-certificates \
@@ -14,6 +15,7 @@ RUN dotnet publish -c Release -o /app
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS final
 COPY --from=build cert ./cert
 RUN apk add --no-cache icu-libs \
+ && apk add --no-cache tzdata \
  && cp cert/*.crt /usr/local/share/ca-certificates/ 2>/dev/null \
  && update-ca-certificates \
  || echo "No specific certificate given."
